add api and change favicon
